# lv-mod

./: .editorconfig  .gitignore  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  index.html  lv.1  lv.hlp  relnote.html
debian/: @patch.lv.20051030_%src%_~use_off_t  README.Debian  changelog  control  copyright  dirs  docs  lv.doc-base  patch.lv.misc  postinst  prerm  rules  watch
debian/patches/: 20050502_~+num-pat-option.diff  20050506_%src%file.c_~enable-fastio-use-fread.2.diff  20051030_%src%_~use_off_t.diff  bts.660358.diff  fix-hyphen-used-as-minus-sign.diff  misc.diff  series  sigvec.patch
scripts/: package.bat
src/: Makefile.am  Makefile.in  Makefile.mingw  Makefile.msvc  Makefile.win  command.c  command.h  conf.c  configure  configure.in  console.c  ctable.c  ctable_t.h  decode.c  dfa.c  display.c  encode.c  encode.h  escape.c  fetch.c  file.c  file.h  find.c  guess.c  guesslocale.c  ichar.h  iscygpty.c  iscygpty.h  lv.c  stream.c  utf.c  utf.h  uty.c  uty.h  version.c  version.h
